--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 		name = "CottonMC"
 		url = "http://server.bbkr.space:8081/artifactory/libs-release"
 	}
+	maven { url = "http://server.bbkr.space:8081/artifactory/libs-snapshot" }
 }
 
 dependencies {
@@ -27,9 +28,6 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	modImplementation "io.github.cottonmc:LibGui:1.8.2+1.15.2"
-
-	modApi 'teamreborn:energy:0.1.0'
-	include 'teamreborn:energy:0.1.0'
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
